# jelly-thingy

./: .gitignore  CMakeLists.txt  INSTALL_LINUX.txt  README.txt  jelly-thingy.kdev4
.kdev4/: jelly-thingy.kdev4
GL/: jelly-thingy-readme.txt
armadillo-3.2.4/: jelly-thingy-readme.txt
boost_1_47/: jelly-thingy-readme.txt
cgal/: jelly-thingy-readme.txt
demo/: CMakeLists.txt  demo_bunny.cpp  demo_cube.cpp
ext/: Texture.cpp  glm.cpp  glm.h  glmimg.cpp  texture.h  zpr.h
inc/: DeformableObject.h  GLWindow.h  GeneralConfig.h  Integrator.h  Node.h  RigidSphere.h
lapack/: jelly-thingy-readme.txt
lib/: jelly-thingy-readme.txt
prj/: deformable-object.sln  demo_bunny.vcxproj  demo_bunny.vcxproj.filters  demo_cube.filters  demo_cube.vcxproj  jelly-thingy.vcxproj  jelly-thingy.vcxproj.filters  plot_data.m
src/: DeformableObject.cpp  GLWindow.cpp  Integrator.cpp  Node.cpp  RigidSphere.cpp
